test/1.4/errors/T_EERRSTMT.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method empty() throws {}

inline method empty_inline(inline x) throws {}

method m5() {
    try {
        empty();
    } catch {
        /// ERROR EERRSTMT
        error;
    }
    try {
        empty_inline(0);
    } catch {
        // This changed since 1.2, SIMICS-9503
        /// ERROR EERRSTMT
        error;
    }
    if (false) {
        /// ERROR EERRSTMT
        error;
    }
    if (true) {
    } else {
        /// ERROR EERRSTMT
        error;
    }
}

// Subdevices may not be named "bank" or "port" in devices
// since that might otherwise cause Simics conf-object names to clash.
/// ERROR EERRSTMT
subdevice port;
/// ERROR EERRSTMT
subdevice bank;

// Banks, ports, and subdevices may not be declared underneath any group named
// "bank" or "port" (as that would introduce conflicting namespaces)
group g1 {
    group bank {
        /// ERROR EERRSTMT
        subdevice s;
        /// ERROR EERRSTMT
        port p;
        /// ERROR EERRSTMT
        bank b;
        group g {
            /// ERROR EERRSTMT
            subdevice s;
            /// ERROR EERRSTMT
            port p;
            /// ERROR EERRSTMT
            bank b;
        }
    }
}

group g2 {
    // no error
    bank port;
    port bank;
}

group g3 {
    /// ERROR EERRSTMT
    subdevice port_ { param name = "port"; }
    // no error
    subdevice port { param name = "port_"; }
}

subdevice s {
    group g {
        group port {
            group g {
                /// ERROR EERRSTMT
                subdevice s;
                /// ERROR EERRSTMT
                port p;
                /// ERROR EERRSTMT
                bank b;
            }
        }
        /// ERROR EERRSTMT
        subdevice bank;
    }
}

// no error
port p {
    group port {
        group bank;
    }
}
bank b {
    group port {
        group bank;
    }
}

method init() {
    m5();
}
